--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.8.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-faiss-cpu==1.9.0
+faiss-cpu>=1.10.0
 fastapi==0.115.2
 frozenlist==1.7.0
 greenlet==3.2.4
