--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pydantic==2.11.9
 openai==1.35.0
 langchain-openai==0.1.8
 langchain-community==0.2.19
-faiss-cpu==1.9.0
+faiss-cpu>=1.10.0  # or faiss-cpu==1.12.0
 spacy==3.7.6
 nltk==3.9.1
 cachetools==5.5.0
