--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ openai==1.35.0
 langchain-openai==0.1.8
 langchain-community==0.2.19
 faiss-cpu>=1.10.0
-spacy @ https://github.com/explosion/spacy-wheels/releases/download/v3.7.6/spacy-3.7.6-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
+spacy==3.7.6
 nltk==3.9.1
 cachetools==5.5.0
 python-dotenv==1.0.1
